--- a/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/index.html
+++ b/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/index.html
@@ -7,38 +7,38 @@
         <p data-pid="UGymgimD">过去两个月，“百模大战”吸足了外界眼球，大模型越发越多，但到底什么样的大模型才是好大模型，却也越来越众说纷纭、备受关注。</p>
         <p data-pid="BwGQ_-wo">就在这样的时间节点，国内最早内测生成式AI大模型的百度，一波新的技术动作，迅速在线下引发热烈反响：</p>
         <p data-pid="_jM_qXQP">5月9日的百度智能云的文心大模型技术交流活动现场，文心一言先是化身“文心问数”，秀了一把分分钟<b>数据可视化</b>的能力。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/0.jpg';this.onerror=null;"
             src="./img/0.jpg" aspect-ratio="1.7623456790123457">
         <p class="ztext-empty-paragraph"><br /></p>
         <p data-pid="u-XxtdKS">但下一分钟，“出bug”的一幕就给逮住了：在面对画折线图的需求时，文心一言压根没懂，来了一句“换个问题试试”。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/1.jpg';this.onerror=null;"
             src="./img/1.jpg" aspect-ratio="7.35632183908046">
         <p class="ztext-empty-paragraph"><br /></p>
         <p data-pid="YmreAH-3">这是上演直播事故了？台上的程序员小哥，却十分淡定，随即调出了一个新界面——文心千帆大模型平台。</p>
         <p data-pid="SGza-psH">结果下一步操作，直接让现场观众纷纷举起手机录像：<b>现！场！微！调！大！模！型！</b></p>
         <p data-pid="6PiTFOzk">只见他当场新建了一个微调数据集。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/2.jpg';this.onerror=null;"
             src="./img/2.jpg" aspect-ratio="1.5311004784688995">
         <p class="ztext-empty-paragraph"><br /></p>
         <p data-pid="mhI9lpWA">导入的是这样一份数量在<b>100条</b>左右的标注数据。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/3.jpg';this.onerror=null;"
             src="./img/3.jpg" aspect-ratio="1.8768328445747802">
         <p class="ztext-empty-paragraph"><br /></p>
         <p data-pid="RWcF6CE8">一通可视化操作下来，不过<b>10几分钟</b>之后，当文心一言再次被要求：</p>
         <blockquote data-pid="8lg2B5FR">华北地区2019年3月的销售额，用折线图表示。</blockquote>
         <p data-pid="t28M5Vmq">它就已经完全不糊涂，能快速给出正确的结果了。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/4.jpg';this.onerror=null;"
             src="./img/4.jpg" aspect-ratio="1.5311004784688995">
         <p class="ztext-empty-paragraph"><br /></p>
         <p data-pid="v0Y08YIe">不错，“现场调教”，恰恰是这一次技术交流活动中，文心一言最受关注的升级重头戏。</p>
         <p data-pid="vvokcS-M">因为这就意味着，在百度围绕文心一言搭建起的工具链中，仅需少量数据，最快几分钟，大模型就能完成一次“定制化”，这也是国内第一个现场演示如何微调行业专属大模型的全过程。</p>
         <p data-pid="LQymBoCq">更重要的是，通过<b>已在内测中</b>的文心千帆大模型平台，这样的训练调优经验和技术，<b>已经可以向第三方输出了</b>。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/5.jpg';this.onerror=null;"
             src="./img/5.jpg" aspect-ratio="1.5045317220543806">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -48,7 +48,7 @@
         <p data-pid="_VZA83SV">先来研究研究，这个“文心千帆大模型平台”，与文心一言具体是个什么关系？</p>
         <p data-pid="U0M5U1tx">简单来说，在文心千帆大模型平台上，企业用户可以直接用上文心一言的大模型服务，不过与此同时，也可以基于这个平台，<b>训练、调优任何第三方大模型，打造属于自己的大模型</b>。
         </p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/6.jpg';this.onerror=null;"
             src="./img/6.jpg" aspect-ratio="1.2075471698113207">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -61,7 +61,7 @@
         <p data-pid="fji6ZmEq">现在有了AI助手，如流不仅能直接模拟同事身份，帮助回答一些专业问题，还能从项目文件中提取关键信息来答疑解惑。</p>
         <p data-pid="S00WOS0T">而且，平均应答时间只需5秒钟，比同事快了60倍。</p>
         <p data-pid="6vGc18Iz">这样看，哪天身边的同事被AI替代了，可能百度员工都不知道（手动狗头）</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/7.jpg';this.onerror=null;"
             src="./img/7.jpg" aspect-ratio="1.1490125673249552">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -70,7 +70,7 @@
         <p data-pid="dS3m2idq">百度集团副总裁侯震宇谈到，尽管当前，从头训练大模型的成本仍然高昂，但使用、微调大模型的成本已经在过去几个月中，有显著降低。</p>
         <p data-pid="YBFir8Ru">比如，现在调用文心一言的成本，已经降低到模型刚发布时（3月16日）的10%。</p>
         <p data-pid="_o5T005D">也就是说，通过文心千帆的公有云服务，用户可以直接服用百度智能云过去积累下的开发、应用大模型的经验，更低成本、低门槛地用上大模型。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/8.jpg';this.onerror=null;"
             src="./img/8.jpg" aspect-ratio="2.807017543859649">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -82,7 +82,7 @@
         </ol>
         <p data-pid="vrkGjlPD">以金山办公为例，他们认为，当前市面上的文档产品，无论是传统的还是流式的，都是基于人们的创作，用自己的笔一行一行把想要的东西表达出来。</p>
         <p data-pid="nxoEf-Oc">这就需要重新思考，AI时代，创作的过程该是什么样子？</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/9.jpg';this.onerror=null;"
             src="./img/9.jpg" aspect-ratio="0.8450704225352113">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -91,7 +91,7 @@
         </p>
         <p data-pid="ZUnQ_kuL">据透露，在意图理解、PPT大纲生成、范文书写、生成待办列表、文生图等多模态生成的场景上，双方的联合开发已经取得了进展，但在细节方面仍然会自己进一步调试。</p>
         <p data-pid="lCQiTeLd">说不定不久后，我们就能在WPS Office上和基于文心千帆大模型平台打造的AI小助手对话了。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/10.jpg';this.onerror=null;"
             src="./img/10.jpg" aspect-ratio="2.1476510067114094">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -100,7 +100,7 @@
             总结一下就是，文心千帆能通过图形化的界面，提供AI算力，数据管理、模型训练、评估优化、服务部署等大模型生产开发全流程的工具链。除了开发，文心千帆还为客户提供了非常好的大模型训练推理服务。</p>
         <p data-pid="4eWM3W8p">有意思的一点是，百度智能云AI与大数据平台总经理忻舟提到，“快且收敛，是大模型应用训练中一个非常重要的指标，只快不收敛，大模型的训练是没有用的。”</p>
         <p data-pid="1JujhbMO">基于文心千帆大模型平台+百度AI大底座的能力，像Bloom、LLaMA、GLM等千亿级第三方开源模型，分布式并行训练的性能提升平均也都能达到150%。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/11.jpg';this.onerror=null;"
             src="./img/11.jpg" aspect-ratio="2.5196850393700787">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -112,7 +112,7 @@
             在被划时代技术所震惊的最初，大家都期待着大模型有“解决一切”的表现。但当技术的优势和局限在实践中不断被验证，“<b>效果</b>”和“<b>成本</b>”这两个评价大模型的关键词，也逐渐清晰起来。</p>
         <p data-pid="-nY2gO5P">这一方面，使得上云使用大模型，成为绝大多数企业的首选：人人都想用大模型，还有不少人想打造自己的大模型，但同时，从头打造大模型依然是一件高投入、高技术含量的事情。</p>
         <p data-pid="AQN664wQ">另一方面，面对市场上越来越多的竞争者，企业如何选择、评估大模型及背后的云计算服务，已成为新的需要被探讨的问题。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/12.jpg';this.onerror=null;"
             src="./img/12.jpg" aspect-ratio="1.7630853994490359">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -126,7 +126,7 @@
         <p data-pid="UnW3Z4uC">
             大模型本身的能力不必过多解释，一组数据足以说明：侯震宇透露，在文心一言开始企业内测以后，在与百度智能云接洽大模型业务的客户中，<b>新客户的比例已经超过了老客户的比例</b>，“有大量的机构，原先不太愿意用，现在愿意跟我们聊，也愿意去用”——大模型本身，已经成为最主要的吸引力来源。
         </p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/13.jpg';this.onerror=null;"
             src="./img/13.jpg" aspect-ratio="0.9937106918238994">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -135,7 +135,7 @@
         <p data-pid="QC0SMNNv"><b>其一，是评估大模型是否“高效好用”，显然算力已经不再是其中的唯一标准。</b></p>
         <p data-pid="xprQrCG6">受限于自身大计算、大参数、高成本等特性，大模型此前在落地上一直存在瓶颈。</p>
         <p data-pid="6DDNG8r5">这也决定了企业在选择大模型时，即使输出效果足够好，也必然还会考虑<b>易用性、安全性、高效性、开放性、扩展性和全面性等</b>诸多方面的因素。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/14.jpg';this.onerror=null;"
             src="./img/14.jpg" aspect-ratio="2.70042194092827">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -143,7 +143,7 @@
         <p data-pid="F7AHS83p">协同<b>算力、框架、模型、应用</b>这四层架构打造AI大模型，才能从根本上决定其端到端的输出效果，是“最佳调优”模式。</p>
         <p data-pid="wRBaTovs">打个比方，对于大模型而言，想要极致优化推理速度和使用成本，算力、框架、模型、应用就像是四个齿轮，各自转速之外，很大程度上还要看它们之间的“配合能力”。</p>
         <p data-pid="PErRKFOD">此前，国内外云厂商或多或少都已经在软硬件技术协同方面进行布局，国外如亚马逊、国内阿里都已经在芯片层、模型层上发展了自研技术，微软则也已经在框架层和应用技术上有所准备。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/15.jpg';this.onerror=null;"
             src="./img/15.jpg" aspect-ratio="1.3389121338912133">
         <p class="ztext-empty-paragraph"><br /></p>
@@ -161,7 +161,7 @@
         </p>
         <p data-pid="QcQR01OB">
             而百度AI大底座，更是通过芯片、框架、模型、应用四层架构之间的高效协同，在基础设施层面上，实现千卡加速比90%、资源利用率70%，开发效率提升100%。这是AI大底座为大模型的开发和应用带来的价值。</p>
-        <p class="ztext-empty-paragraph"><br /></p><img
+        <p class="ztext-empty-paragraph"><br /></p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/百度交流会大玩心跳！现场实时调教大模型，放出背后更强底座文心千帆628314306/img/16.jpg';this.onerror=null;"
             src="./img/16.jpg" aspect-ratio="1.8823529411764706">
         <p class="ztext-empty-paragraph"><br /></p>
