--- a/经济下行期会对00后有什么影响_3010227214/index.html
+++ b/经济下行期会对00后有什么影响_3010227214/index.html
@@ -9,7 +9,7 @@
         <p data-pid="Z-y9FMdt">某个时间段的小胖友，他们未来十年乃至更长时间里，收入会明显降低。</p>
         <p data-pid="rI4ldFZj">这才是青年失业的核心：财富流动的节奏在某代人身上被打乱。</p>
         <p class="ztext-empty-paragraph"><br /></p>
-        <p data-pid="cNu3Mk87">老美智库CAP，13年讨论次贷危机后老美青年高失业率的长期后果。那时他们16至24岁的青年失业率是16.2%。</p><img
+        <p data-pid="cNu3Mk87">老美智库CAP，13年讨论次贷危机后老美青年高失业率的长期后果。那时他们16至24岁的青年失业率是16.2%。</p><img loading="lazy"
             onerror="this.src='https://collection.sduoooh.me/经济下行期会对00后有什么影响_3010227214/img/0.jpg';this.onerror=null;"
             src="./img/0.jpg" aspect-ratio="1.7914012738853504">
         <p data-pid="OYDpotKT">结论是：</p>
